--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -26,12 +26,15 @@
     justify-items: center;
     margin: auto;
 }
-.picture_grid > img{
+.picture_grid img{
     object-fit: cover;
+    transition: transform .2s; /* Animation */
     width: 100%;
     max-height: 100%;
 }
-
+.picture_grid img:hover{
+    transform: scale(1.5);
+}
 
 @font-face {
     font-family: Oswald, sans-serif;
@@ -40,5 +43,12 @@
 .parentdiv {
     position: relative;
     margin: auto;
-    padding: 10rem;
+    padding-top: 5rem;
+    align-content: center;
+    padding-left: 2rem;
+  }
+
+  .parentdiv img {
+
+    width: 50%;
   }
