--- a/src/styles/production.css
+++ b/src/styles/production.css
@@ -55,3 +55,62 @@
 .picture_grid_produktion img:hover{
         transform: scale(1.5);
     }
+@media only screen and (max-width: 1542px) {
+
+    .poduction_headline h1 {
+        position: relative;
+        font-size: 4em;
+        font-weight: lighter;
+        padding-left: 2.5rem;
+        padding-bottom: 0rem;
+        padding-top: 0rem;
+        float: none;
+        padding: 0;
+        max-width: 100%;
+    }
+    
+    .poduction_headline img {
+        position: relative;
+        font-weight: lighter;
+        max-width: 45%;
+        min-width: 20rem;
+        padding-top: 0rem;
+        padding-bottom: 2rem; 
+        float: none;
+        padding-right: 0rem;
+        }
+    
+    .mid_center_section {
+        position: relative;
+        padding-left: 3rem;
+        max-width: 80%;
+        width: 80%;
+        padding-top: 1rem;
+        padding-bottom: 3rem;
+        text-align: center;
+        padding-right: 0rem;
+    }
+    
+    .picture_grid_produktion { 
+        display: grid;
+        grid-auto-flow: column;
+        position: relative;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 10%;
+        max-width: 100rem;
+        grid-gap: 2rem;
+        justify-items: center;
+        margin: auto;
+    
+    }
+    .picture_grid_produktion img{
+        width: 100%;
+        max-width: 20rem;
+        max-height: 100%;
+        padding-bottom: 5rem;
+        transition: transform .2s; /* Animation */
+    }
+    .picture_grid_produktion img:hover{
+            transform: scale(1.5);
+        }
+}
