--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -44,8 +44,45 @@
     align-content: center;
     padding-left: 2rem;
   }
-
-  .parentdiv img {
-
-    width: 50%;
+ .parentdiv img {
+    width: 60%;
   }
+
+
+@media only screen and (max-width: 1286px) {
+  .parentdiv img {
+    width: 90%;
+    padding-right: 1rem;
+  }
+  .picture_grid { 
+    position: relative;
+    display: grid;
+    max-width: 13rem;
+    grid-auto-flow: row;
+    gap: 2rem;
+    justify-items: center;
+    margin: auto;
+}
+.picture_grid > img{
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
+}
+
+
+.home_page_start_text h1 {
+  font-size: 2rem;
+  font-family: Oswald, sans-serif;
+  font-weight: 50;
+ }
+ 
+.home_page_start_text p {
+    font-size: 1.6rem;
+    font-family: Oswald, sans-serif;
+    font-weight: 50;
+    bottom: 1rem;
+    position: relative;
+    }
+ 
+}
+ 
