--- a/src/styles/projekter.css
+++ b/src/styles/projekter.css
@@ -1,3 +1,5 @@
+/*Alt fra linje 118 og ned skal ændres så det er pænt på mobil*/
+
 .projekter_headline h1 {
     position: relative;
     font-size: 7rem;
@@ -19,6 +21,31 @@
     min-width: 20rem;
     }
 
+ /*Dette skal ikke rettes fra linje 23 til 46*/   
+@media only screen and (max-width: 1670px) {
+    .projekter_headline h1 {
+        position: relative;
+        font-size: 4em;
+        font-weight: lighter;
+        padding-left: 2.5rem;
+        padding-bottom: 0rem;
+        padding-top: 0rem;
+        float: none;
+        padding: 0;
+        max-width: 100%;
+    }
+    
+    .projekter_headline img {
+        position: relative;
+        font-weight: lighter;
+        max-width: 45%;
+        min-width: 20rem;
+        padding-top: 0rem;
+        padding-bottom: 2rem; 
+        float: none;
+        padding-right: 0rem;
+        }
+}
 
 .grids {
     padding-top: 5%;
@@ -86,4 +113,68 @@ padding: 1.5rem;
     
 .column_text.left {
     padding-left: 10rem;
+    }
+
+
+@media only screen and (max-width: 1432px) {
+    .column img {
+        max-width: 30rem;
+        padding: 1.5rem;
+        }
+        
+        .column_text {
+            position: relative;
+            font-size: 1.1rem;
+            text-align: left;
+            max-width: 70%;
+        }
+        
+        .img_right_columns {
+            background-color: #D5D5D7;
+            width: 100%;
+            position: relative;
+            display: grid;
+            grid-auto-flow: column;
+            align-items: center;
+            max-height: 20rem;
+            height: 20rem;
+            
+        }   
+        .img_right_columns.first {
+            background-color: #97979B;
+        }
+        
+        
+        
+        .column.right img {
+            padding-right: 8rem;
+            padding-left: 10%;
+            }
+            
+        .column_text.right {
+            padding-left: 10rem;
+            }
+        
+        .img_left_columns {
+            background-color: #B6B6B9;
+            width: 100%;
+            position: relative;
+            display: grid;
+            grid-auto-flow: column;
+            align-items: center;
+            max-height: 30rem;
+            height: 20rem;
+        }
+        
+        .img_left_columns.first{
+            background-color: #828287;
+        }
+        .column.left img {
+            padding-right: 4rem;
+            }
+            
+        .column_text.left {
+            padding-left: 10rem;
+            }
+        
     }
