--- a/src/styles/montage.css
+++ b/src/styles/montage.css
@@ -27,10 +27,15 @@
     text-align: left;
     position: relative;
     max-width: 60rem;
+    max-width: 70%;
     padding-left: 30rem;
-    padding-right: 30rem;
     padding-top: 40rem;
     padding-bottom: 10rem;
+}
+
+.mid_center_section_montage h2{
+    font-size: 2.5rem;
+    font-weight: 600;
 }
 
 .picture_grid_montage { 
