--- a/src/styles/production.css
+++ b/src/styles/production.css
@@ -26,11 +26,15 @@
 .mid_center_section {
     text-align: left;
     position: relative;
-    max-width: 60rem;
+    max-width: 70%;
     padding-left: 30rem;
-    padding-right: 30rem;
     padding-top: 40rem;
     padding-bottom: 10rem;
+}
+
+.mid_center_section h2{
+    font-size: 2.5rem;
+    font-weight: 600;
 }
 
 .picture_grid_produktion { 
