--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -32,96 +32,20 @@
 .image_logo {
   background-image: url("../images/logo.png");
   background-size: 11rem;
-  min-width: 7rem;
+  min-width: 11rem;
   width: 13rem;
   position: relative;
   background-repeat: no-repeat;
   height: 5rem;
   min-height: 5rem;
-  bottom: 1rem;
-  left: 10rem;
+  margin: 1rem;
+  margin-bottom: 2rem;
 }
 
-/*
-.site_header {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  background-image: linear-gradient(
-    155deg,
-    hsl(0deg 0% 85%) 0%,
-    hsl(344deg 0% 77%) 23%,
-    hsl(344deg 0% 68%) 32%,
-    hsl(344deg 0% 60%) 39%,
-    hsl(344deg 0% 52%) 46%,
-    hsl(344deg 0% 44%) 52%,
-    hsl(344deg 0% 36%) 57%,
-    hsl(344deg 0% 29%) 63%,
-    hsl(344deg 0% 22%) 68%,
-    hsl(344deg 0% 15%) 75%,
-    hsl(343deg 0% 9%) 82%,
-    hsl(0deg 0% 0%) 100%
-  );
-  min-height: 9rem;
-  max-height: 10rem;
-}
 
-.image_logo {
-  background-image: url("../images/logo.png");
-  background-size: 11rem;
-  min-width: 7rem;
-  width: 13rem;
-  position: relative;
-  background-repeat: no-repeat;
-  height: 5rem;
-  min-height: 5rem;
-  margin: auto;
-  padding-top: 2rem;
-  left: 6rem;
-}*/
 
-.site_header ul {
-  position: relative;
-  padding-top: 4rem;
-  padding-right: 40rem;
-  font-size: 1.5rem;
-}
-@media only screen and (max-width: 1670px) {
-  .image_logo {
-    width: 13rem;
-    height: 5rem;
-    min-height: 5rem;
-    margin: auto;
-    padding-top: 2rem;
-  }
 
-  .site_header ul {
-    padding-right: 30rem;
-  
-  }
-}
 
-@media only screen and (max-width: 1483px) {
-  .site_header ul {
-    padding-right: 15rem;
-  }
-}
-
-@media only screen and (max-width: 1300px) {
-  .site_header ul {
-    padding-right: 15rem;
-  }
-}
-.site_header li {
-	display: inline;
-
-}
-.site_header a {
-	display: inline-block;
-	padding: .5em 1.2em;
-  color: white;
-  text-decoration: none;
-}
 
 .footer {
   position:relative;
@@ -163,10 +87,20 @@
 .navbar-toggler:focus {
   box-shadow: none !important;
 }
-
+.navbar {
+  position: relative;
+  display: grid;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+  grid-auto-flow: column;
+  grid-column-gap: 10rem;
+  padding-left: 10rem;
+  
+}
 .navbar-nav{
   padding-top: 5rem;
-  padding-left: 15rem !important;
+  position: relative;
+  row-gap: 2rem;
 
 }
 .nav-link{
@@ -175,29 +109,73 @@
   font-weight: light;
   font-size: 1.5rem;
   color: white !important;
-  margin-left: 1.5rem;
+
+}
+.navbar-expand-lg .navbar-nav {
+  flex-direction: row;
+  gap: 1.5rem;
+}
+
+@media only screen and (max-width: 1670px) {
+  .image_logo {
+    width: 13rem;
+    height: 5rem;
+    min-height: 5rem;
+    margin: auto;
+    padding-top: 2rem;
+  }
+
 }
 
 
-@media only screen and (max-width: 990px) {
+@media only screen and (max-width: 1190px) {
+  .navbar {
+    position: relative;
+    display: grid;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    grid-auto-flow: column;
+    grid-column-gap: 4rem;
+    padding-left: 5rem;
+    
+  }
+}
+
+@media only screen and (max-width: 991px) {
 .nav-link{
   display: inline-block!important;
   text-decoration: none!important;
   font-weight: bold;
-  font-size: large;
+  font-size: medium;
 }
 .navbar-nav{
   padding-left: 0 !important;
 }
 .image_logo {
-  left: 2rem;
+  left: 4rem;
   top: 0;
-  padding-left: 2.5rem;
+  padding-left: 2rem;
+  background-size: 9rem;
+  width: 10rem;
 }
-.nav-link{
-  display: inline-block!important;
-  text-decoration: none!important;
-  font-weight: bold;
-  color: none;
+.navbar {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 0rem;
+}
+.navbar-expand-lg .navbar-nav{
+  padding-top: 0rem;
+  position: relative;
+  gap: 0rem;
+
+}
+.navbar-expand-lg .navbar-nav {
+  flex-direction: column;
+  
 }
 }
