--- a/src/styles/production.css
+++ b/src/styles/production.css
@@ -86,9 +86,9 @@
     
     .mid_center_section {
         position: relative;
-        padding-left: 3rem;
-        max-width: 80%;
-        width: 80%;
+        margin: auto;
+        padding: 0;
+        width: 100%;
         padding-top: 1rem;
         padding-bottom: 3rem;
         text-align: center;
