--- a/src/styles/Kontakt.css
+++ b/src/styles/Kontakt.css
@@ -5,8 +5,7 @@
 .kontakt_body {
     display: grid;
     grid-template-columns: 50% 50%;
-    width:100%;
-    height:50%;
+    padding-bottom: 3rem;
 }
 .kontakt_body_left {
     margin-left: 10rem;
@@ -19,6 +18,7 @@
     width:80%;
     height:100%;
     text-align: left;
+    max-width: 80rem;
 }
 
 .kontakt_body_countries_grid {
