--- a/src/styles/montage.css
+++ b/src/styles/montage.css
@@ -1,14 +1,22 @@
 @font-face {
-    font-family: Oswald, sans-serif;
-    src: url("Oswald-VariableFont_wght.ttf");
+    font-family: Oswald;
+    src: url("./Oswald-VariableFont_wght.ttf");
+    
+  }
+  @font-face {
+    font-family: MAU;
+    src: url('./chinese.msyh.ttf');
   }
 .montage_headline h1 {
     position: relative;
-    font-size: 7rem;
-    font-weight: lighter;
+    font-size: 8rem;
+    font-weight: 100;
+    font-family: MAU;
     float: left;
-    padding: 8rem;
+    padding-left: 11rem;
+    padding-top: 12rem;
     max-width: 45%;
+    margin: auto;
     
 }
 
@@ -36,6 +44,11 @@
 .mid_center_section_montage h2{
     font-size: 2.5rem;
     font-weight: 600;
+}
+
+.mid_center_section_montage p{
+    font-size: 1.2rem;
+    font-weight: 100;
 }
 
 .picture_grid_montage { 
