--- a/src/styles/production.css
+++ b/src/styles/production.css
@@ -1,15 +1,24 @@
 @font-face {
     font-family: Oswald, sans-serif;
     src: url("Oswald-VariableFont_wght.ttf");
+
+
+  }
+
+@font-face {
+    font-family: MAU;
+    src: url('./chinese.msyh.ttf');
   }
 .poduction_headline h1 {
-    position: relative;
-    font-size: 7rem;
-    font-weight: lighter;
+position: relative;
+    font-size: 8rem;
+    font-weight: 100;
+    font-family: MAU;
     float: left;
-    padding: 8rem;
+    padding-left: 11rem;
+    padding-top: 12rem;
     max-width: 45%;
-    
+    margin: auto;
 }
 
 .poduction_headline img {
@@ -35,6 +44,10 @@
 .mid_center_section h2{
     font-size: 2.5rem;
     font-weight: 600;
+}
+.mid_center_section p{
+    font-size: 1.2rem;
+    font-weight: 100;
 }
 
 .picture_grid_produktion { 
