--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -43,7 +43,10 @@
 }
 
 
-
+.drop_down_langauge {
+  padding-left: 20rem;
+  padding-bottom: 2rem;
+}
 
 
 
@@ -124,22 +127,42 @@
     margin: auto;
     padding-top: 2rem;
   }
-
+  .drop_down_langauge {
+    position: relative;
+    padding-left: 5rem;
+    right: 2rem;
+    padding-bottom: 2rem;
+  }
 }
 
-
-@media only screen and (max-width: 1190px) {
+@media only screen and (max-width: 1390px) {
+  .drop_down_langauge {
+    position: relative;
+    padding-left: 0rem;
+    right: 5rem;
+    padding-bottom: 2rem;
+  }
+}
+@media only screen and (max-width: 1278px) {
   .navbar {
     position: relative;
     display: grid;
     padding-top: .5rem;
     padding-bottom: .5rem;
     grid-auto-flow: column;
-    grid-column-gap: 4rem;
+    grid-column-gap: 0rem;
     padding-left: 5rem;
     
   }
+
+  .drop_down_langauge {
+    position: relative;
+    padding-left: 0rem;
+    right: 0rem;
+    padding-bottom: 2rem;
+  }
 }
+
 
 @media only screen and (max-width: 991px) {
 .nav-link{
@@ -167,6 +190,7 @@
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     padding-left: 0rem;
+    grid-column-gap: 2rem;
 }
 .navbar-expand-lg .navbar-nav{
   padding-top: 0rem;
