--- a/src/styles/Kontakt.css
+++ b/src/styles/Kontakt.css
@@ -23,7 +23,7 @@
 
 .kontakt_body_countries_grid {
     display:grid;
-    grid-template-columns: 9rem 6rem 6rem;
+    grid-template-columns: 9rem 6rem 6rem 6rem;
 }
 
 @media only screen and (max-width: 990px) {
