--- a/src/styles/production.css
+++ b/src/styles/production.css
@@ -66,7 +66,11 @@
     font-size: 1.2rem;
     font-weight: 100;
 }
+.center_text_produktion {
 
+    white-space: pre-line;
+    
+    }
 .picture_grid_produktion { 
     display: grid;
     grid-auto-flow: column;
@@ -92,6 +96,8 @@
     max-height: 100%;
     padding-bottom: 5rem;
   }
+  .swiper-button-next { color: White !important}
+  .swiper-button-prev { color: White !important}
 
   .swiper-slide-container {
     position: absolute;
