--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -15,6 +15,7 @@
 }
 
 .home_page_start_text  {
+    padding-top: 10rem;
     text-align: center;
     position: relative;
 }
@@ -23,7 +24,7 @@
  font-size: 4.5rem;
  font-family: Oswald;
  font-weight: 50;
- padding-top: 2rem;
+ padding-top: 4rem;
  padding-bottom: 3rem;
  font-weight: 500;
 }
@@ -69,7 +70,49 @@
   }
 
 
-@media only screen and (max-width: 1286px) {
+@media only screen and (max-width: 1265px) {
+  .home_page_start_text  {
+    padding-top: 1rem;
+    text-align: center;
+    position: relative;
+}
+  .parentdiv img {
+    width: 90%;
+    padding-right: 1rem;
+  }
+  .picture_grid { 
+    position: relative;
+    display: grid;
+    max-width: 100rem;
+    grid-auto-flow: column;
+    gap: 2rem;
+    justify-items: center;
+    margin: auto;
+}
+.picture_grid > img{
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
+}
+
+
+.home_page_start_text h1 {
+  font-size: 2rem;
+  font-family: Oswald, sans-serif;
+  font-weight: 500;
+ }
+ 
+.home_page_start_text p {
+    font-size: 1.6rem;
+    font-family: Oswald, sans-serif;
+    font-weight: 50;
+    bottom: 1rem;
+    position: relative;
+    }
+ 
+}
+ 
+@media only screen and (max-width: 989px) {
   .parentdiv img {
     width: 90%;
     padding-right: 1rem;
@@ -93,7 +136,7 @@
 .home_page_start_text h1 {
   font-size: 2rem;
   font-family: Oswald, sans-serif;
-  font-weight: 50;
+  font-weight: 500;
  }
  
 .home_page_start_text p {
@@ -105,5 +148,4 @@
     }
  
 }
- 
 
