--- a/src/styles/montage.css
+++ b/src/styles/montage.css
@@ -7,6 +7,10 @@
     font-family: MAU;
     src: url('./chinese.msyh.ttf');
   }
+
+.montage_headline {
+    padding-top: 10rem;
+}
 .montage_headline h1 {
     position: relative;
     font-size: 7rem;
@@ -18,6 +22,14 @@
     max-width: 45%;
     margin: auto;
     
+}
+
+.ul_montage {
+    columns: 2;
+    -webkit-columns: 2;
+    -moz-columns: 2;
+    font-size: medium;
+    font-weight: 600;
 }
 .center_text_montage {
 white-space: pre-line;
@@ -74,7 +86,9 @@ white-space: pre-line;
 
 
 @media only screen and (max-width: 1542px) {
-
+    .montage_headline {
+        padding-top: 10rem;
+    }
     .montage_headline h1 {
         position: relative;
         font-size: 5rem;
@@ -82,7 +96,7 @@ white-space: pre-line;
         font-family: MAU;
         float: left;
         padding-left: 12rem;
-        padding-top: 11rem;
+        padding-top: 5rem;
         max-width: 35%;
     }
     
@@ -102,7 +116,7 @@ white-space: pre-line;
         margin: auto;
         padding: 5rem;
         width: 60%;
-        padding-top: 2rem;
+        padding-top: 5rem;
         padding-bottom: 5rem;
         padding-right: 0rem;
     }
