--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -100,7 +100,13 @@
   grid-column-gap: 10rem;
   padding-left: 10rem;
   z-index: 10;
+  transition: 0.20s all ease-in-out;
 }
+.shadownav {
+  box-shadow: 0px 1px 10px #999;
+  z-index: 100;
+
+  }
 .navbar-nav{
   padding-top: 5rem;
   position: relative;
