--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -20,6 +20,14 @@
     position: relative;
 }
 
+.welcome_text {
+  width: 80rem;
+  padding: 5rem 0 5rem 0;
+  margin: 0 auto;
+  font-size: 1.35rem;
+  font-weight: 400;
+  white-space: pre-line;
+}
 .home_page_start_text h1 {
  font-size: 4.5rem;
  font-family: Oswald;
@@ -41,7 +49,8 @@
 .picture_grid { 
     position: relative;
     display: grid;
-    max-width: 100rem;
+    max-width: 90rem;
+    height: 35rem;
     grid-auto-flow: column;
     gap: 2rem;
     justify-items: center;
