--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,7 @@
   text-align: center;
 }
 
+
 .content {
   min-height: 70vh;
 }
@@ -54,7 +55,7 @@
   margin: 0;
   bottom: 0;
   width: 100%;
-  height:9rem;
+  height: 12vh;
   background: #2f2f2f;
 }
 
