--- a/src/styles/projekter.css
+++ b/src/styles/projekter.css
@@ -1,30 +1,25 @@
-/*Alt fra linje 118 og ned skal ændres så det er pænt på mobil*/
 .projekter_headline {
     padding-top: 10rem;
+    display: flex;
+    gap: 1rem;
+    justify-content: space-between;
 }
 .projekter_headline h1 {
     position: relative;
     font-size: 7rem;
-    font-weight: lighter;
+    font-weight: 100;
     font-family: MAU;
-    float: left;
-    padding-left: 11rem;
-    padding-top: 12rem;
-    max-width: 45%;
-    margin: auto;
+    padding-top: 5rem;
+    padding-left: 10rem;
+    align-self: center;
 }
 
 .projekter_headline img {
     position: relative;
-    font-weight: lighter;
-    float: right;
     padding-top: 5rem;
     padding-right: 5rem;
-    margin: auto;
-    max-width: 45%;
-    min-width: 20rem;
+    width: 50vw;
     }
-
 .image_list {
     position: relative;
 }
@@ -36,51 +31,45 @@
 
  /*Dette skal ikke rettes fra linje 23 til 46*/   
 @media only screen and (max-width: 1542px) {
+    .projekter_headline {
+        padding-top: 10rem;
+        display: flex;
+    }
+
     .projekter_headline h1 {
-        position: relative;
-        font-size: 5rem;
-        font-weight: 100;
-        font-family: MAU;
-        float: left;
-        padding-left: 12rem;
-        padding-top: 11rem;
-        max-width: 35%;
+    position: relative;
+    font-size: 5rem;
+    font-weight: 100;
+    font-family: MAU;
+    padding-left: 2rem;
+    padding-top: 12rem;
     }
     
     .projekter_headline img {
         position: relative;
         font-weight: lighter;
-        max-width: 35%;
-        min-width: 20rem;
         padding-top: 5rem;
-        padding-bottom: 2rem; 
-        float: none;
-        padding-right: 0rem;
+        padding-right: 9rem;
         }
 }
 
 @media only screen and (max-width: 1242px) {
     .projekter_headline h1 {
         position: relative;
-        font-size: 4em;
-        font-weight: lighter;
-        padding-left: 0rem;
-        padding-bottom: 0rem;
-        padding-top: 2rem;
-        float: none;
-        max-width: 100%;
+        font-size: 5rem;
+        font-weight: 100;
+        font-family: MAU;
+        padding-left: 3rem;
+        width: 50%;
     }
-    
+
     .projekter_headline img {
         position: relative;
         font-weight: lighter;
-        max-width: 45%;
-        min-width: 20rem;
-        padding-top: 2rem;
-        padding-bottom: 2rem; 
-        float: none;
-        padding-right: 0rem;
-        }
+        padding-top: 5rem;
+        padding-right: 1rem;
+        width: 50%;
+    }
 
 
 }
@@ -309,6 +298,34 @@ padding: 3rem 5rem 3rem 5rem;
             .column_text.right {
                 padding-left: 0rem;
                 padding: 2rem;
+                }
+            
+        }
+        @media only screen and (max-width: 1156px) {
+            .projekter_headline {
+                padding-top: 0rem;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+            .projekter_headline h1 {
+                position: relative;
+                font-size: 8vw;
+                font-weight: 100;
+                font-family: MAU;
+                padding-left: 0rem;
+                padding-right: 0rem;
+                padding-top: 2rem;
+                width: 50%;
+            }
+            
+            .projekter_headline img {
+                position: relative;
+                font-weight: lighter;
+                padding-top: 1rem;
+                padding-bottom: 2rem;
+                padding-right: 0rem;
+                width: 50%;
                 }
             
         }
